--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Reszier App | Free Image Resizer</title>
+  <meta name="theme-color" content="06cab0">
+  <title>Image Reszier App | Free Image Resizer by BlaizingInfernoDragon123</title>
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="stylesheet" href="./css/fontawesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,7 +17,7 @@
       <input type="file" accept="image/*" hidden />
       <img src="./img/upload-icon.svg" alt="">
       <p>
-        Browse File to Upload
+        Browse Files to Upload
       </p>
     </div>
     <div class="content">
